Reduce chat tab dependencies